[package]
name = "porter-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
porter-core = { path = "../porter-core" }
async-graphql = { version = "^3", features = ["chrono"] }
chrono = "^0"
async-graphql-warp = "^3"
tokio = { version = "^1", features = ["full"] }
warp = "^0"
